syntax = "proto3";
package babylon.monitor.v1;

import "gogoproto/gogo.proto";
import "babylon/monitor/params.proto";

option go_package = "github.com/babylonchain/babylon/x/monitor/types";

// GenesisState defines the monitor module's genesis state.
message GenesisState { Params params = 1 [ (gogoproto.nullable) = false ]; }
